--- a/pkg/web/templates/layout.html
+++ b/pkg/web/templates/layout.html
@@ -36,7 +36,6 @@
 <body class="min-h-screen bg-base-200 flex flex-col">
 <!-- Toast Container -->
 <div class="toast-container fixed bottom-4 right-4 z-50 space-y-2">
-    <!-- Toast messages will be created dynamically here -->
 </div>
 
 <!-- Navigation -->
@@ -72,7 +71,7 @@
         <a class="btn btn-ghost text-xl font-bold text-primary group" href="{{.URLBase}}">
             <!-- Logo -->
             <img src="{{.URLBase}}images/logo.svg" alt="Decypharr Logo" class="w-8 h-8 inline-block mr-2">
-            <span class="hidden sm:inline bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Decypharr</span>
+            <span class="hidden sm:inline bg-clip-text text-transparent">Decypharr</span>
         </a>
     </div>
 
