Fix issues with headers

--- a/pkg/web/templates/layout.html
+++ b/pkg/web/templates/layout.html
@@ -107,7 +107,7 @@
     <div class="navbar-end">
         <div class="flex items-center gap-3">
             <!-- Theme Toggle -->
-            <div class="tooltip tooltip-left" data-tip="Toggle Theme">
+            <div class="tooltip tooltip-left">
                 <label class="swap swap-rotate btn btn-ghost btn-circle hover:bg-base-300 transition-colors">
                     <input type="checkbox" id="themeToggle" class="theme-controller" />
                     <!-- Sun icon for light mode -->
