minor fixes, change help text

--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -362,7 +362,7 @@
                                             </label>
                                             <input type="text" class="input input-bordered" name="rclone.mount_path" id="rclone.mount_path" placeholder="/mnt/decypharr">
                                             <div class="label">
-                                                <span class="label-text-alt">Base directory where all providers will be mounted (e.g., /mnt/decypharr/realdebrid)</span>
+                                                <span class="label-text-alt">Base directory where all providers will be mounted (e.g., /mnt/decypharr)</span>
                                             </div>
                                         </div>
 
